2008-07-25  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_arm_thumb1_ok):
	New.
	* g++.dg/inherit/thunk8.C: Use it.

2008-07-23  Ian Lance Taylor  <iant@google.com>

	* gcc.target/i386/20080723-1.c: New test.

2008-07-22  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* lib/target-supports.exp (check_effective_target_spu_auto_overlay):
	New procedure.
	* lib/compat.exp (compat-execute): Use it to test whether toolchain
	supports automatic overlay generation for the SPU.

2008-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36877
	* gcc.dg/gomp/atomic-11.c: New test.

2008-07-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/36366
	* gfortran.dg/used_types_20.f90: New test.

2008-07-18  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/36407
	* g++.dg/conversion/op5.C: New testcase.

2008-07-18  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/35281
	* gcc.target/i386/pr35281.c: New.

2008-07-17  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:

	2008-06-02  Andy Hutchinson  <hutchinsonandy@aim.com>
	* gcc.dg/torture/pr34330.c: Skip test for targets without pthread.
	* gcc.dg/torture/pr36244.c: Ditto.
	* gcc.dg/tree-ssa/pr36181.c: Ditto.

2008-07-17  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:

	2008-05-27  Trevor Smigiel  <trevor_smigiel@playstation.sony.com>
		    Sa Liu  <saliu@de.ibm.com> 

	* gcc.target/spu/muldivti3.c: New. Test TImode mul and div
	functions on SPU.

	2008-05-08  Sa Liu  <saliu@de.ibm.com>

	* gcc.target/spu/subti3.c: New.

2008-07-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/36824
	* gfortran.dg/array_4.f90: New.

2008-07-17  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/36753
	* gcc.target/i386/pr36753.c: New.

2008-07-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36369
	* gcc.dg/Wstrict-aliasing-bogus-ref-all.c: New testcase.

2008-07-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/35492